# graph_rviz_plugin

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  package.xml  plugin.xml
.github/workflows/: ros_ci.yml
config/: example.rviz  gui.rviz
include/graph_rviz_plugin/: configure.hpp  configure_graph.hpp  graph_settings.hpp  histogram_panel.hpp  line_panel.hpp  panel.hpp  selection_topics.hpp  settings.hpp  topic_color.hpp  topic_data.hpp
include/rviz_graph_panel/: configure.hpp  configure_axes.hpp  configure_graph.hpp  configure_topics.hpp  panel.hpp  selection_topics.hpp  topic.hpp  topic_data.hpp
launch/: example.launch  rviz.launch
scripts/: example_multi_array.py
src/: .panel.cpp.kate-swp  .topic.cpp.kate-swp  configure.cpp  configure_axes.cpp  configure_graph.cpp  configure_topics.cpp  graph_settings.cpp  histogram_panel.cpp  line_panel.cpp  panel.cpp  qcustomplot.cpp  selection_topics.cpp  settings.cpp  topic.cpp  topic_data.cpp
