<?xml version="1.0"?>
<package format="2">
  <name>graph_rviz_plugin</name>
  <version>0.0.1</version>
  <description>RViz graph plugin</description>

  <author>Édouard Pronier, Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>class_loader</depend>
  <depend>qtbase5-dev</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rviz</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>
